styles.css
body { 
  background: white;
  padding: 0;
  margin: 0;
}

header {
  width: 100%;
  background: #f4b648;
  height: 350px;
}

header .face {
  background: url(images/face.png) no-repeat;
  height: 315px;
  width: 315px;
  position: relative;
  margin: 0 auto;
  top: 180px;
  
}
header nav {
  float: right;
  margin-top: 20px;
}
header nav a {
  display: inline-block;
  text-decoration: none;
  margin-left: 20px;
  margin-right: 20px;
  color: black;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 20px;
}

header nav a:hover {
  display: inline-block;
  text-decoration: none;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 20px;
  transition: 0.5s;
}

#overlay {
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 1;
  top: 0;;
  left: 0;
  background-color: white;
  overflow-x: hidden;
  transition: 0.5s;
  text-align: center;
  padding-top: 100px;
  line-height: 30px;
}

#overlay a {
  text-decoration: none;
  font-family: 'Roboto', 'sans-serif';
  color: black;
}

#overlay a:hover {
  transition: 0.3s;
  color: #f4b648;
}

@media only screen and (max-width: 880px) {
  header nav {
    display: none;
    margin-left: 0;
  }
  .menu {
    display: inline-block;
    cursor: pointer;
    float: right;
    margin: 10px 10px 10px 10px;
    z-index: 2; 
    position:relative;

  }
  
  .bar1, .bar2, .bar3 {
    width: 25px;
    height: 4px;
    background-color: #333;
    margin: 5px 0;
    transition: 0.4s;
  }

  .change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-5px, 3px);
    transform: rotate(-45deg) translate(-5px, 3px);
  }

.change .bar2 {opacity: 0;}

.change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-8px, -8px)
  }

  .project {
    display: block;
    max-width: 550px;
  }


}
.blurb {
  max-width: 630px;
  margin: 0 auto;
  margin-top: 200px;
}

.blurb p {
  font-family: 'Courier New', Courier, monospace;
  font-weight: bold;
  text-align: center;
  padding-bottom: 100px;
}

.project {
  width: 1100px;
  margin: 0 auto;
  padding-top: 100px;
  display: flex;
}

.project-preview img {
  max-width: 100%;
  height: auto;
}

.project-info {
  width: 500px;
  padding: 50px 50px 50px 50px;
  line-height: 20px;
  font-family: 'Roboto', 'sans-serif';
}

.project-info h3 {
  text-transform: uppercase;
  color: gray;
  font-weight: 500;
  font-size: 18px;
}

.project-info h1 {
  font-weight: 400;
  font-size: 24px;

}

.project-info p {
  font-weight: 100;
  font-size: 18px;
  color: black;
}

.project-info img {
  padding: 0 20px 0 0px;
}

